--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,5 +1,6 @@
 <% layout("layouts/boilerplate.ejs") %>
 
+<!-- show the error message  -->
 <div class="alert alert-danger" role="alert">
   <h4><%= message %></h4>
 </div>
